--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,13 @@
         margin-top: 3%;
         clear: both;
       }
-
+      h4 {
+        color: white;
+        font-size: 29px;
+        text-decoration: underline;
+        background-color: rgb(179, 175, 168);
+        border-radius: 10px;
+      }
       .signInorsignUp {
         margin: auto;
         width: 26%;
@@ -268,6 +274,7 @@
 
       <section class="signInorsignUp">
         <img src="cafe.png" id="coffeePic" /><br />
+        <h4>sign up or sign in to see the orders!</h4>
         <a href="/login" class="btn btn-default"
           ><span class="fa fa-user"></span>Login</a
         >
