--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,7 +20,7 @@
   body{
      background-image: url('back11.jpeg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 130%;
     
    }
 
@@ -39,6 +39,7 @@
     border-radius: 200px;
     box-shadow: 7px 7px 1px rgba(4, 4, 4, 0.281);
     padding:2%;
+    background-color: rgb(143, 85, 8);
   }
 
   .userInfo{
